AG-40468 Fix popup size issues in Android Edge [master]
Squashed commit of the following:

commit 9374222317d522136aeb6dd6e470ae7074d7c66c
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Mar 13 16:50:44 2025 +0500

    flickering when tab switches

commit 42ab39dd218d9c63192de431e2fa199fd5ad6c51
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Mar 13 15:13:11 2025 +0500

    fixed console warning

commit 4d5d008346ea53a7cba0bc8c510fd37107134b2f
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Mar 13 12:38:39 2025 +0500

    fixed popup size issues

--- a/Extension/src/pages/common/styles/vars.pcss
+++ b/Extension/src/pages/common/styles/vars.pcss
@@ -57,6 +57,7 @@
     /* Other variables */
     --popup-width: 320px;
     --popup-height: 600px;
+    --popup-default-height: 600px; /* Size of popup in desktop browsers */
 
     /* Base colors: */
 
@@ -291,4 +292,9 @@
     --text-lables-labels-default: var(--gray-70);
     --text-main-text-main-default: var(--gray-80);
     --text-placeholder-placeholder-disabled: var(--gray-40);
+}
+
+.android {
+    /* In android browsers popup size is dynamic, so we need to adjust its size */
+    --popup-width: 100%;
 }
