--- a/Extension/src/pages/popup/components/Actions/actions.pcss
+++ b/Extension/src/pages/popup/components/Actions/actions.pcss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    max-width: 320px;
+    max-width: var(--popup-width);
 
     .action {
         width: 100%;
